--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -15,6 +15,7 @@
         a {
             font-size: 30px;
             font-weight: 600;
+            color: white;
 
             &:hover {
                 cursor: pointer;
@@ -30,6 +31,7 @@
         a {
             padding: 0 20px;
             font-size: 20px;
+            color: white;
 
             &:hover {
                 font-weight: 600;
@@ -43,12 +45,13 @@
 
         p {
             font-size: 25px;
-
+            color: white;
         }
 
         a {
             padding: 0px 2px;
             font-size: 20px;
+            color: white;
         }
 
         &:hover {
