--- a/client/src/styles/Homepage.scss
+++ b/client/src/styles/Homepage.scss
@@ -1,3 +1,5 @@
+@import './breakpoint.scss';
+
 .homepage-container {
 
     .image {
@@ -18,6 +20,10 @@
             padding: 20px 0;
             font-weight: 700;
             color: #2c3e50;
+
+            @include ml {
+                font-size: 23px;
+            }
         }
 
         .description {
@@ -26,24 +32,57 @@
             text-align: center;
             padding: 50px 100px;
 
+            @include lg {
+                padding: 50px 70px;
+            }
+
+            @include md {
+                padding: 50px 30px;
+            }
+
             .topic {
                 justify-content: center;
 
                 .icon {
                     font-size: 35px;
                     color: #2c3e50;
+
+                    @include lg {
+                        font-size: 25px;
+                    }
+
+                    @include md {
+                        font-size: 20px;
+                    }
                 }
 
                 .quantity {
                     color: #2c3e50;
                     font-size: 45px;
                     font-weight: 500;
+
+                    @include lg {
+                        font-size: 35px;
+                    }
+
+                    @include md {
+                        font-size: 25px;
+                    }
                 }
 
                 .role {
                     color: #34495e;
                     font-size: 25px;
                     font-weight: 400;
+
+                    @include lg {
+                        font-size: 17px;
+                    }
+
+                    @include md {
+                        font-size: 12px;
+                    }
+
                 }
             }
         }
