--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -68,6 +68,10 @@
             .profile {
                 font-size: 35px;
                 color: white;
+
+                @include md {
+                    font-size: 25px;
+                }
             }
 
             .nav-profile-dropdown {
