create tuition page and update UI

--- a/client/src/styles/Introduction.scss
+++ b/client/src/styles/Introduction.scss
@@ -41,6 +41,10 @@
                     align-items: center;
                 }
             }
+
+            @include mm {
+                text-align: center;
+            }
         }
 
 
