--- a/client/src/styles/StudentManage.scss
+++ b/client/src/styles/StudentManage.scss
@@ -2,6 +2,7 @@
 
 .student-manage-container {
     min-height: 75vh;
+    background-color: #ecf0f1;
 
     .student-container-bottom {
         display: flex;
