--- a/client/src/styles/ManageOverall.scss
+++ b/client/src/styles/ManageOverall.scss
@@ -59,17 +59,18 @@
 
                 @include md {
                     margin: 50px 0;
-                    flex-direction: column;
+                    // flex-direction: column;
                 }
 
                 .search-content {
                     position: relative;
+                    display: flex;
 
                     input {
                         width: 500px;
-                        padding: 5px;
+                        padding: 0 5px;
                         border-radius: 5px;
-                        position: absolute;
+                        position: relative;
 
                         @include lg {
                             width: 350px;
@@ -96,8 +97,12 @@
                     }
                 }
 
+                .select-semester {
+                    margin-left: 100px;
+                }
+
                 .create-button {
-                    margin-left: 600px;
+                    margin-left: 100px;
 
                     button {
                         padding: 3px 10px;
