Update manage subject for student (delete)

--- a/client/src/styles/StudentManage.scss
+++ b/client/src/styles/StudentManage.scss
@@ -47,6 +47,15 @@
                     background-color: #34495e;
                 }
             }
+
+            .danger {
+                background-color: #a5270b;
+                margin-left: 5px;
+
+                &:hover {
+                    background-color: #cf1d1d;
+                }
+            }
         }
     }
 }
